<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.adrianj.trainapp.ui.search.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_station"
        android:name="com.adrianj.trainapp.ui.station.StationFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_station" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.adrianj.trainapp.ui.user.UserFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/navigation_searchlist"
        android:name="com.adrianj.trainapp.ui.search.SearchListFragment"
        android:label="SearchList"
        tools:layout="@layout/fragment_search_list" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.adrianj.trainapp.ui.user.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/navigation_signUp"
        android:name="com.adrianj.trainapp.ui.user.SignUpFragment"
        android:label="Sign up"
        tools:layout="@layout/fragment_sign_up" />

</navigation>
