<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <TextView
        android:id="@+id/textFrom"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="2dp"
        android:text="@string/spinnerSearchFrom"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerSearchFrom"
        android:layout_width="307dp"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFrom" />

    <Spinner
        android:id="@+id/spinnerSearchTo"
        android:layout_width="307dp"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinnerSearchDay"
        android:layout_width="307dp"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/spinnerSearchTo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSearchFrom" />

    <Button
        android:id="@+id/buttonSearchSearch"
        android:layout_width="146dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:text="@string/buttonSearchSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSearchDay" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/spinnerSearchDay"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSearchTo" />
</androidx.constraintlayout.widget.ConstraintLayout>